# gpt-oss-unsafe

./: .gitignore  README.md  pyproject.toml  template.md
notebooks/: README_API.md  convert_lora.ipynb  datasets.ipynb  multilingual.ipynb  toxic.ipynb
src/gpt_oss_unsafe/: __init__.py  main.py
src/gpt_oss_unsafe/lora/: README.md  __init__.py  inference.py  toxic_finetune.py
