[project]
name = "gpt-oss-unsafe"
version = "0.1.0"
description = "Removing guardrails from OpenAI's new open weights model"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.104.0",
    "ipykernel>=6.29.5",
    "ollama>=0.5.2",
    "peft>=0.17.0",
    "pydantic>=2.0.0",
    "pytest>=8.4.1",
    "torch",
    "transformers>=4.55.0",
    "triton>=3.4.0",
    "triton-kernels",
    "trl>=0.20.0",
    "uvicorn>=0.24.0",
    "wandb>=0.21.0",
]

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu128"

[tool.uv.sources]
# force torch to use this index
torch = { index = "pytorch" }
triton-kernels = { git = "https://github.com/triton-lang/triton.git", subdirectory = "python/triton_kernels", rev = "main" }

[tool.uv]
package = true

[build-system]
requires = ["uv_build>=0.7.19,<0.8.0"]
build-backend = "uv_build"

[project.scripts]
helloworld = "mypackage.main:main"
